tidy for App Engine deployment

--- a/src/main/resources/liddemo.properties
+++ b/src/main/resources/liddemo.properties
@@ -1,5 +1,5 @@
 #
-#  Properties which define the LID (Light IDentity) service
+#  Properties which define the LID (Lightweight IDentity) service
 #  You should create your own version of this file and load it in an overridden
 #  version of LidServeContextListener, by overriding the <code>getResourceLocation</code>
 #  method to the location of this resource.
@@ -19,14 +19,14 @@ auth.redirect.default=/index.html
 # When you've sent the user an Email, the return host is here, hte local return
 # being fot hte development server, the remote for production
 email.return.local=http://localhost:8080
-email.return.remote=https://cilogi-lid.appspot.com
+email.return.remote=https://cilogi-liddemo.appspot.com
 
 # For login by email.  The return is needed to action the cookie
 email.login=/login/email
 email.loginReturn=/login/emailReturn
 
 # Address from which email is sent
-email.from=noreply@cillogi-liddemo.appspot.com"
+email.from=noreply@cilogi-liddemo.appspotmail.com
 
 # For  login by Google.  Since Google handles everything we need a return to process the cookie
 google.login=/login/google
