added in new mustache email

--- a/src/main/resources/liddemo.properties
+++ b/src/main/resources/liddemo.properties
@@ -27,6 +27,7 @@ email.loginReturn=/login/emailReturn
 
 # Address from which email is sent
 email.from=noreply@cilogi-liddemo.appspotmail.com
+email.template=/userEmail.mustache
 
 # For  login by Google.  Since Google handles everything we need a return to process the cookie
 google.login=/login/google
