minor mods for documentation purposes

--- a/src/main/resources/liddemo.properties
+++ b/src/main/resources/liddemo.properties
@@ -13,15 +13,16 @@ cookie.expireDays=30
 # This location _must not_ require authentication or authorization or you could get an infinite loop.
 default.redirect=/index.html
 
-# Same thing.
+# Same thing, but where to go after a call which would have accessed a URL which required
+# an authenticated (ie logged in) user.
 auth.redirect.default=/index.html
 
-# When you've sent the user an Email, the return host is here, hte local return
-# being fot hte development server, the remote for production
+# When you've sent the user an Email, the return host is here, yhr local return
+# being for the development server, the remote for production
 email.return.local=http://localhost:8080
 email.return.remote=https://cilogi-liddemo.appspot.com
 
-# For login by email.  The return is needed to action the cookie
+# For login by email.  The return is needed to create the cookie, it redirects
 email.login=/login/email
 email.loginReturn=/login/emailReturn
 
