styling the login form

--- a/src/main/resources/liddemo.properties
+++ b/src/main/resources/liddemo.properties
@@ -34,16 +34,18 @@ email.template=/userEmail.mustache
 google.login=/login/google
 google.loginReturn=/login/googleReturn
 
-# Facebook login
+# Facebook login, must be set in your Facebook app as the OAuth redirect URI (for the host which will be set for you
+# in the code, but will be the email.return.remote host
 facebook.login=/login/facebook
 
-# The call to the user status servlet which tells us the user name and what sort of login
+# The call to the user status servlet which tells us the user name and id as well as what sort of login
 user.status=/user/status
 
 # The logout URL
 logout=/logout
 
-# Where secret properties that can't go into Github live, such as the Facebook keys
+# Where secret properties that can't go into Github live, such as the Facebook keys, there is a secret-demo.properties
+# file provided to show you the format
 secret.properties=/secret.properties
 
 
