propery name mods

--- a/src/main/resources/liddemo.properties
+++ b/src/main/resources/liddemo.properties
@@ -17,10 +17,10 @@ default.redirect=/index.html
 # an authenticated (ie logged in) user.
 auth.redirect.default=/index.html
 
-# When you've sent the user an Email, the return host is here, yhr local return
+# When you've sent the user an Email, the return host is here, your local return
 # being for the development server, the remote for production
-email.return.local=http://localhost:8080
-email.return.remote=https://cilogi-liddemo.appspot.com
+host.development=http://localhost:8080
+host.production=https://cilogi-liddemo.appspot.com
 
 # For login by email.  The return is needed to create the cookie, it redirects
 email.login=/login/email
