added email header

--- a/src/main/resources/liddemo.properties
+++ b/src/main/resources/liddemo.properties
@@ -16,6 +16,7 @@ default.redirect=/index.html
 # Same thing, but where to go after a call which would have accessed a URL which required
 # an authenticated (ie logged in) user.
 auth.redirect.default=/index.html
+login.page=/login.html
 
 # When you've sent the user an Email, the return host is here, your local return
 # being for the development server, the remote for production
@@ -29,6 +30,7 @@ email.loginReturn=/login/emailReturn
 # Address from which email is sent
 email.from=noreply@cilogi-liddemo.appspotmail.com
 email.template=/userEmail.mustache
+email.heading=Please follow this link to log in to Liddemo
 
 # For  login by Google.  Since Google handles everything we need a return to process the cookie
 google.login=/login/google
