--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,22 @@
     <name>lid</name>
     <description>Lightweight Identity for AppEngine</description>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+        <!--  using jitpack.io instead
+        <repository>
+            <id>lid-mvn-repo</id>
+            <url>https://raw.github.com/cilogi/lid/mvn-repo/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+        -->
+    </repositories>
 
     <!-- Specify hard-coded project properties here -->
     <properties>
@@ -21,9 +37,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.cilogi</groupId>
+            <groupId>com.github.cilogi</groupId>
             <artifactId>lid</artifactId>
-            <version>1.0</version>
+            <version>v1.0.1</version>
         </dependency>
         <dependency>
             <groupId>javax.transaction</groupId>
@@ -107,19 +123,19 @@
             <version>18.0</version>
         </dependency>
         <dependency>
-        	<groupId>com.google.appengine.tools</groupId>
-        	<artifactId>appengine-gcs-client</artifactId>
-        	<version>0.4.4</version>
+            <groupId>com.google.appengine.tools</groupId>
+            <artifactId>appengine-gcs-client</artifactId>
+            <version>0.4.4</version>
         </dependency>
         <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-core</artifactId>
-          <version>2.5.2</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.5.2</version>
         </dependency>
         <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-annotations</artifactId>
-          <version>2.5.2</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.5.2</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -220,7 +236,7 @@
                 <configuration>
                     <cfgFile>src/main/resources/fmpp/config.fmpp</cfgFile>
                     <outputDirectory>${basedir}/src/main/webapp</outputDirectory>
-                   <templateDirectory>src/main/resources/ftl/</templateDirectory>
+                    <templateDirectory>src/main/resources/ftl/</templateDirectory>
                 </configuration>
                 <executions>
                     <execution>
