--- a/src/main/resources/secret-demo.properties
+++ b/src/main/resources/secret-demo.properties
@@ -1,6 +1,8 @@
-# these are the Facebook keys, fuill in your values
-fb.local.apiKey=xxxx
-fb.local.apiSecret=yyyy
+# these are the Facebook keys, fill in your own
+# the file should be moved to secret.properties
+# you can get the app keys from https://developers.facebook.com
+fb.local.apiKey=aaa
+fb.local.apiSecret=bbb
 fb.local.host=http://localhost:8080
 
 fb.live.apiKey=xxxx
@@ -8,6 +10,7 @@ fb.live.apiSecret=yyyy
 fb.live.host=https://cilogi-liddemo.appspot.com
 
 
-# Generate 16 bytes of data and encode as Base64
-jose.128=zzzz...
+# Generate 16 bytes of data and encode as Base64, if you use this one it ain't secure
+# since its BEEN PUBLISHED
+jose.128=nBDUyxkEowQ+338HC7J5Dg==
 
